--- a/CheckListTemplates/Views/PPT/Edit.cshtml
+++ b/CheckListTemplates/Views/PPT/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CheckListTemplates.Models.DTO.RunTB>
+﻿@model IEnumerable<CheckListTemplates.Models.DTO.RunDTO>
 
 @{
     ViewBag.Title = "Edit";
